# ZxingCPPAndroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/maxst/www/zxingcpptest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ImageReaderSource.cpp  ImageReaderSource.hpp  NativeManager.cpp
app/src/main/cpp/include/zxing/aztec/decoder/: Decoder.cpp
app/src/main/cpp/include/zxing/qrcode/decoder/: DecodedBitStreamParser.cpp
app/src/main/java/com/maxst/www/zxingcpptest/: AutoFitTextureView.java  Camera2Fragment.java  MainActivity.java  NativeManager.java
app/src/main/res/layout/: activity_main.xml  fragment_camera2_basic.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/maxst/www/zxingcpptest/: ExampleUnitTest.java
zxing/: CMakeLists.txt  build.gradle  test
zxing/src/androidTest/java/com/maxst/www/zxing/: ExampleInstrumentedTest.java
zxing/src/main/: AndroidManifest.xml
zxing/src/test/java/com/maxst/www/zxing/: ExampleUnitTest.java
